# tox-pyproject-plugins

./: .gitignore  README.md  pyproject.toml  tox.ini
src/tox_pyproject/plugins/discovery/: b.py
tests/b/: test_b.py
